--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -186,6 +186,21 @@
         animation: backto-top-bounce 0s infinite ease-in-out;
 	}
 }
+
+@media (max-width: 768px) {
+    .footer-area .widget {
+        text-align: center;
+    }
+
+    .footer-area .widget_nav_menu ul {
+        padding-left: 0;
+    }
+
+    .footer-area .widget_nav_menu ul li {
+        display: inline-block;
+        margin: 0 10px;
+    }
+}
 @media all and (max-width: 767px) {
 	.section-title h2,
 	.video-area .section-title h2 {
@@ -472,3 +487,9 @@
 	    padding: 30px 20px;
 	}
 }
+/* @media (max-width: 768px) {
+	.single-property-grid h4 {
+	  text-align: center; /* Center text on smaller screens */
+	  margin: 0 auto;
+	}
+  } */
