<<Hamza>>set img on property detail page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5811,3 +5811,40 @@ input:focus, select:focus {
   height: 40px;
   border-radius: 5px;
 }
+
+
+/* image in property pages */
+/* Main image above the slider */
+.single-thumbnail-slider .slider-item img {
+  width: 100%; 
+  height: 500px; 
+  object-fit: cover; 
+  border-radius: 5px; 
+}
+
+/* Thumbnail images in the slider */
+.product-thumbnail-carousel .single-thumbnail-item img {
+  width: 100%; 
+  height: 100px; 
+  object-fit: cover; 
+  border-radius: 5px; 
+}
+
+
+#thumbnailCarousel .carousel-inner {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start;
+    overflow-x: auto; 
+}
+
+.single-thumbnail-item {
+    margin-right: 10px; 
+    width: 80px; 
+    height: auto;
+}
+
+#thumbnailCarousel .carousel-item {
+    flex: 0 0 auto;
+}
+
