--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1568,7 +1568,7 @@ ul {
 
 .navbar-area .nav-container .navbar-collapse .navbar-nav {
   display: block;
-  width: 100%;
+  width: 80%;
 }
 
 .navbar-area .nav-container .navbar-collapse .navbar-nav li {
@@ -1595,6 +1595,7 @@ ul {
 .navbar-area .nav-container .navbar-collapse .navbar-nav li.menu-item-has-children {
   position: relative;
   z-index: 0;
+  width: 95px;
 
 }
 
@@ -1655,6 +1656,7 @@ ul {
   visibility: hidden; /* Hidden by default */
   opacity: 0; /* Transparent by default */
   transition: all 0.4s ease; /* Smooth transition */
+  left: 110px;
 }
 
 .navbar-area .nav-container .navbar-collapse .navbar-nav li.menu-item-has-children:hover .sub-menu {
@@ -1792,7 +1794,13 @@ ul {
 .nav-right-part ul li {
   list-style: none;
   display: inline-block;
-  margin-left: 2px;
+  margin-left: 137px;
+}
+
+@media (min-width: 980px) and (max-width: 1299px) {
+  .nav-right-part ul li {
+      margin-left: 3px; /* Add margin-left of 3px */
+  }
 }
 
 .nav-right-part ul li a {
@@ -2103,6 +2111,7 @@ ul {
     line-height: 30px;
     padding: 10px 0;
     border-bottom: 1px solid rgba(255, 255, 255, 0.09);
+    margin-left:0px;
   }
 
   .navbar-area .nav-container .navbar-collapse .navbar-nav li a {
@@ -2146,6 +2155,7 @@ ul {
     transition: none;
     visibility: visible;
     opacity: 1;
+    
   }
 
   .navbar-area .nav-container .navbar-collapse .navbar-nav li.menu-item-has-children .sub-menu .sub-menu .menu-item-has-children:before {
@@ -5867,3 +5877,89 @@ input:focus, select:focus {
   overflow-y: auto; /* Enables vertical scroll */
 }
 
+/* notification in header  */
+
+.notification-container {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  height: 40px;
+  width: 40px;
+  z-index: 1050;
+}
+
+.notification-icon {
+  position: relative;
+  font-size: 24px;
+  color: #333;
+  cursor: pointer;
+}
+
+.notification-icon i {
+  font-size: 28px;
+  color: #5ba600;
+}
+
+.notification-icon i:hover {
+  color: #565872;
+}
+
+.notification-indicator {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  height: 20px;
+  width: 20px;
+  background-color: brown;
+  border: 2px solid rgb(51, 51, 51);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.notification-count {
+  font-family: 'Montserrat', Arial, sans-serif;
+  color: aliceblue;
+  font-weight: 700;
+  font-size: 12px;
+}
+
+/* Dropdown menu styles */
+.notification-dropdown {
+  display: none; /* Hidden by default */
+  position: absolute;
+  top: 45px; /* Adjust this to place it below the bell icon */
+  right: 0;
+  width: 200px; /* Adjust the width of the dropdown */
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  z-index: 1051;
+}
+
+.notification-dropdown ul {
+  list-style: none;
+  padding: 10px 0;
+  margin-left: 15px;
+}
+
+.notification-dropdown ul li {
+  padding: 10px;
+  text-align: left;
+  margin-left: 15px;
+}
+
+.notification-dropdown ul li a {
+  color: #333;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.notification-dropdown ul li:hover {
+  background-color: #f5f5f5;
+}
+
+.notification-dropdown ul li:hover a {
+  color: #333;
+}
