--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -592,7 +592,7 @@ ul {
   font-size: 14px;
   margin-top: -2px;
   float: inherit;
-} 
+}
 /* auction accept reject button   */
 .btn.btn-sm {
   height: 28px;
@@ -2155,7 +2155,7 @@ ul {
     transition: none;
     visibility: visible;
     opacity: 1;
-    
+
   }
 
   .navbar-area .nav-container .navbar-collapse .navbar-nav li.menu-item-has-children .sub-menu .sub-menu .menu-item-has-children:before {
@@ -5661,7 +5661,7 @@ select:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  /*background-color: rgba(0, 0, 0, 0.5);*/
   justify-content: center;
   align-items: center;
   z-index: 9999;
@@ -5741,7 +5741,7 @@ input:focus, select:focus {
   border: #5ba600 1px solid;
   border-radius: 5px;
 }
-  
+
 /* Transaction bill popup  */
 /* Transaction Bill Popup */
 #transaction-popup {
@@ -5769,8 +5769,8 @@ input:focus, select:focus {
   position: relative;
   animation: fadeIn 0.3s;
   border: 4px solid #1a1a1a; /* Darker border */
-  display: flex; 
-  flex-direction: column; 
+  display: flex;
+  flex-direction: column;
   align-items: center; /* Center content horizontally */
   justify-content: center; /* Center content vertically */
   overflow: auto; /* Scrollable content if necessary */
@@ -5829,8 +5829,8 @@ input:focus, select:focus {
 
 /* Edit delete button  */
 .custom-small-btn {
-  padding: 0px 14px; 
-  font-size: 14px;   
+  padding: 0px 14px;
+  font-size: 14px;
   height: 40px;
   border-radius: 5px;
 }
@@ -5839,18 +5839,18 @@ input:focus, select:focus {
 /* image in property pages */
 /* Main image above the slider */
 .single-thumbnail-slider .slider-item img {
-  width: 100%; 
-  height: 500px; 
-  object-fit: cover; 
-  border-radius: 5px; 
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 /* Thumbnail images in the slider */
 .product-thumbnail-carousel .single-thumbnail-item img {
-  width: 100%; 
-  height: 100px; 
-  object-fit: cover; 
-  border-radius: 5px; 
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 
@@ -5858,12 +5858,12 @@ input:focus, select:focus {
     display: flex;
     flex-wrap: nowrap;
     justify-content: start;
-    overflow-x: auto; 
+    overflow-x: auto;
 }
 
 .single-thumbnail-item {
-    margin-right: 10px; 
-    width: 80px; 
+    margin-right: 10px;
+    width: 80px;
     height: auto;
 }
 
