--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -488,3 +488,19 @@
 	}
 }
 
+/* for secondary propereties  */
+
+@media (max-width: 768px) {
+    .card__article {
+        flex: 1 1 calc(50% - 1rem);
+        max-width: calc(50% - 1rem);
+    }
+}
+
+@media (max-width: 576px) {
+    .card__article {
+        flex: 1 1 100%;
+        max-width: 100%;
+    }
+}
+
