--- a/public/assets/css/vendor.css
+++ b/public/assets/css/vendor.css
@@ -5017,7 +5017,8 @@ pre code {
 
 .table thead th {
     vertical-align: bottom;
-    border-bottom: 2px solid #dee2e6
+    border-bottom: 2px solid #dee2e6;
+    font-size: 15px;
 }
 
 .table tbody + tbody {
