--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6059,3 +6059,66 @@ input:focus, select:focus {
 }
 
 
+
+
+/* investor details page tables */
+
+.custom-table {
+    background-color: #fff;
+    border: 3px solid #5ba600; /* Outer green border */
+    border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-collapse: separate; /* Allows outer and inner borders to be different */
+    border-spacing: 0; /* Ensures proper spacing */
+}
+
+
+.custom-table th {
+    background-color: #f8f9fa;
+    color: #000;
+    font-weight: bold;
+}
+
+.custom-table td,
+.custom-table th {
+    padding: 10px;
+    border: 1px solid #dee2e6;
+}
+
+.nav-tabs .nav-link {
+    color: #5ba600;
+    font-weight: bold;
+}
+
+.nav-tabs .nav-link.active {
+    background-color: #5ba600;
+    color: #fff;
+}
+
+.custom-table th {
+    white-space: nowrap;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.custom-table th,
+.custom-table td {
+    white-space: normal;
+    text-align: center;
+    vertical-align: middle;
+    padding: 8px;
+
+}
+
+.btn-details {
+    background-color: #5ba600;
+    color: #fff;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+
