--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3140,7 +3140,7 @@ section.bg-light {
 .single-product-wrap .product-details-inner {
   background: #ffffff; /* Use white or light background for better shadow effect */
   padding: 20px 35px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
+  box-shadow: 0px 4px 10px rgb(12 11 11 / 25%); /* Soft shadow effect */
   /* transition: all 0.3s ease-in-out;  */
   flex-grow: 1; /* Ensures content expands evenly */
   display: flex;
@@ -3203,7 +3203,7 @@ section.bg-light {
   padding: 12px 35px;
   border-bottom-left-radius: 10px; /* Matches the card's rounded corners */
   border-bottom-right-radius: 10px;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.08); /* Subtle shadow for depth */
+  box-shadow: 0px 4px 10px rgb(12 11 11 / 25%); /* Subtle shadow for depth */
   /* transition: all 0.3s ease-in-out; */
   margin-bottom: 15px;
 }
